--- a/shared/zuul-gateway.yml
+++ b/shared/zuul-gateway.yml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: gateway-service
+  profiles: production
+
 server:
   port: 8662
     
@@ -8,8 +10,6 @@ eureka:
   instance:
     prefer-ip-address: false
   client:
-    register-with-eureka: true
-    fetch-registry: true
     service-url:
       defaultZone: http://eureka-registry:8282/eureka
 
