--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,35 @@
 					<finalName>${project.name}</finalName>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>com.spotify</groupId>
+				<artifactId>docker-maven-plugin</artifactId>
+				<version>1.2.2</version>
+				<configuration>
+					<imageName>${project.artifactId}</imageName>
+					<baseImage>openjdk:11-jre-slim</baseImage>
+					<entryPoint>["java","-Dspring.profiles.active=${PROFILE}","-jar","/${project.name}.jar"]</entryPoint>
+					<imageTags>
+						<imageTag>latest</imageTag>
+					</imageTags>
+					<runs>
+						<run>mkdir -p /opt/config/shares</run>
+					</runs>
+					<volumes>
+						<volume>/opt/config/shares</volume>
+					</volumes>
+					<resources>
+						<resource>
+							<targetPath>/</targetPath>
+							<directory>${project.build.directory}</directory>
+							<include>${project.name}.jar</include>
+						</resource>
+					</resources>
+					<env>
+						<PROFILE>native</PROFILE>
+					</env>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
-
 </project>
